# pipermail-listfetch

./: LICENSE  Makefile  README.md  pipermail-listfetch.py  pipermail_listfetch.py  pyproject.toml  requirements.txt
