[tool.poetry]
name = "pipermail_listfetch"
version = "0.1.0"
license = "MIT"
description = "is a Python script for downloading mailing list archives off pipermail."
authors = ["Alinur"]
classifiers = [
    "Private :: Do not Upload",
]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4"
requests = "^2"
lxml = "^5"

[tool.poetry.group.dev.dependencies]
ruff = "^0"
types-beautifulsoup4 = "^4"
types-requests = "^2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
"pipermail-listfetch.py" = "pipermail_listfetch:main"
